solve hidden scrollbar problems on body overflow
Keep height of html element at 100%.
* Height of nav is 76px
* Body leaves margin of 76px for nav to sit in
Keep height of body at calc(100% - 76%)
All set!

--- a/blog/static/blog/css/style.css
+++ b/blog/static/blog/css/style.css
@@ -4,8 +4,14 @@ body {
     width: 100%;
 }
 
+html {
+    overflow-y: hidden;
+    height: 100%;
+}
+
 body {
     margin-top: 76px;
+    height: calc(100% - 76px);
     background-color: white;
     background: white url('../img/noise-pattern.png') repeat;
     color: #222;
